--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,11 +12,10 @@ djangorestframework = "3.15.2"
 django-cors-headers = "4.4.0"   
 django-filter = "^23.2"
 django-environ = "0.10.0"
-argon2-cffi = "23.1.0"
+argon2-cffi = "^23.1.0"
 django-allauth = "^0.55.2"
 djangorestframework-simplejwt = "5.2.2"
 dj-rest-auth = "5.0.1"
-gunicorn = "20.1.0"
 drf-yasg= "1.21.7" 
 psycopg2-binary = "^2.9.9"
 django-autoslug = "^1.9.9"
