--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,9 @@ djangorestframework = "3.15.2"
 django-cors-headers = "4.4.0"   
 django-filter = "^23.2"
 django-environ = "0.10.0"
+django-countries="7.5.1"
+django-phonenumber-field="7.0.2"
+phonenumbers="8.13.7"
 argon2-cffi = "^23.1.0"
 django-allauth = "^0.55.2"
 djangorestframework-simplejwt = "5.2.2"
@@ -20,6 +23,7 @@ drf-yasg= "1.21.7"
 psycopg2-binary = "^2.9.9"
 django-autoslug = "^1.9.9"
 pillow = "^10.4.0"
+
 
 
 [tool.poetry.group.dev.dependencies]
